crates/pasta_lua/tests/transpiler/snapshots/transpiler__final_regression_test__r7_1_off_path__fixture_tail_call_optimization.snap
---
source: crates/pasta_lua/tests/transpiler/final_regression_test.rs
expression: lua
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local ACTOR = PASTA.create_actor("さくら")
    ACTOR:create_word("通常"):entry([=[\s[0]]=])
end

do
    local ACTOR = PASTA.create_actor("うにゅう")
    ACTOR:create_word("通常"):entry([=[\s[10]]=])
end

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:call_restore(SCENE.__global_name__, "単一呼び出し", {}, table.unpack(args))
        act:call_restore(SCENE.__global_name__, "複数呼び出し", {}, table.unpack(args))
        act:call_restore(SCENE.__global_name__, "呼び出し後にアクション", {}, table.unpack(args))
        return act:call(SCENE.__global_name__, "呼び出しなし", {}, table.unpack(args))
    end

    function SCENE.単一呼び出し_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        return act:call(SCENE.__global_name__, "シーン2", {}, table.unpack(args))
    end

    function SCENE.複数呼び出し_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:call_restore(SCENE.__global_name__, "シーン1", {}, table.unpack(args))
        act:call_restore(SCENE.__global_name__, "シーン2", {}, table.unpack(args))
        return act:call(SCENE.__global_name__, "シーン3", {}, table.unpack(args))
    end

    function SCENE.呼び出し後にアクション_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:call_restore(SCENE.__global_name__, "シーン2", {}, table.unpack(args))
        act:actor_proxy("さくら"):talk("こんにちは")
    end

    function SCENE.呼び出しなし_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("こんにちは")
        act:actor_proxy("うにゅう"):talk("やふぅ")
    end

    function SCENE.シーン1_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("シーン1です")
    end

    function SCENE.シーン2_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("うにゅう"):talk("シーン2やで")
    end

    function SCENE.シーン3_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("シーン3だよ")
    end
end
