crates/pasta_lua/tests/transpiler/snapshots/transpiler__final_regression_test__r7_1_off_path__fixture_zero_cost_all_syntax.snap
---
source: crates/pasta_lua/tests/transpiler/final_regression_test.rs
expression: lua
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

PASTA.create_word("挨拶"):entry("おはよう", "こんにちは", "こんばんは")
do
    local ACTOR = PASTA.create_actor("さくら")
    ACTOR:create_word("一人称"):entry("私", "わたし", "あたし")

    function ACTOR.時刻(act)
        return "朝"
    end
end

do
    local ACTOR = PASTA.create_actor("うにゅう")
    ACTOR:create_word("一人称"):entry("僕", "ぼく")
end

do
    local SCENE = PASTA.create_scene("メイン")

    SCENE:create_word("場所"):entry("東京", "大阪")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        var.カウンタ = "10"
        save.グローバル = "永続値"
        act:set_property("mood", "happy")
        act:actor_proxy("さくら"):talk("「")
        act:actor_proxy("さくら"):talk(act:actor_proxy("さくら"):word("挨拶"))
        act:actor_proxy("さくら"):talk("！")
        act:actor_proxy("さくら"):talk(act:actor_proxy("さくら"):word("一人称は元気です"))
        act:actor_proxy("さくら"):talk("」")
        act:actor_proxy("うにゅう"):talk("「")
        act:actor_proxy("うにゅう"):talk(act:actor_proxy("うにゅう"):word("場所にいるよ"))
        act:actor_proxy("うにゅう"):talk("」")
        return act:call(SCENE.__global_name__, "サブ会話", {}, table.unpack(args))
    end

    function SCENE.サブ会話_1(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("「カウンタは")
        act:actor_proxy("さくら"):talk(var.カウンタ, "var.カウンタ")
        act:actor_proxy("さくら"):talk("、グローバルは")
        act:actor_proxy("さくら"):talk(save.グローバル, "save.グローバル")
        act:actor_proxy("さくら"):talk("」")
    end

    local total = 1 + 2
    return total
end
