crates/pasta_lua/tests/transpiler/snapshots/transpiler__final_regression_test__r7_1_off_path__kind_actor_word_definition.snap
---
source: crates/pasta_lua/tests/transpiler/final_regression_test.rs
expression: lua
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local ACTOR = PASTA.create_actor("さくら")
    ACTOR:create_word("一人称"):entry("私", "わたし", "あたし")
end

do
    local ACTOR = PASTA.create_actor("うにゅう")
    ACTOR:create_word("一人称"):entry("僕", "ぼく")
end

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("「")
        act:actor_proxy("さくら"):talk(act:actor_proxy("さくら"):word("一人称は元気です"))
        act:actor_proxy("さくら"):talk("」")
    end
end
