crates/pasta_lua/tests/transpiler/snapshots/transpiler__final_regression_test__r7_1_off_path__kind_scene_attributes.snap
---
source: crates/pasta_lua/tests/transpiler/final_regression_test.rs
expression: lua
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("「今日の天気は晴れです」")
    end
end
