crates/pasta_lua/tests/transpiler/snapshots/transpiler__final_regression_test__r7_1_off_path__kind_variable_assignment.snap
---
source: crates/pasta_lua/tests/transpiler/final_regression_test.rs
expression: lua
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        var.カウンタ = "10"
        save.グローバル = "永続値"
        act:actor_proxy("さくら"):talk("「カウンタは")
        act:actor_proxy("さくら"):talk(var.カウンタ, "var.カウンタ")
        act:actor_proxy("さくら"):talk("、グローバルは")
        act:actor_proxy("さくら"):talk(save.グローバル, "save.グローバル")
        act:actor_proxy("さくら"):talk("」")
    end
end
